<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ViewSwitcher
        android:id="@+id/switcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >

        <RelativeLayout
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbar" >

            <TextView
                android:id="@+id/docNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/linkButton"
                android:layout_alignParentLeft="true"
                android:paddingLeft="16dp"
                android:singleLine="true"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageButton
                android:id="@+id/linkButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/outlineButton"
                android:contentDescription="@string/link_control"
                android:background="@drawable/button"
                android:src="@drawable/ic_link" />

            <ImageButton
                android:id="@+id/outlineButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/searchButton"
                android:contentDescription="@string/search_document"
                android:background="@drawable/button"
                android:src="@drawable/ic_list" />

            <ImageButton
                android:id="@+id/searchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/search_document"
                android:background="@drawable/button"
                android:src="@drawable/ic_magnifying_glass" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/topBar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/toolbar" >

            <ImageButton
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:contentDescription="@string/cancel"
                android:background="@drawable/button"
                android:src="@drawable/ic_cancel" />

            <EditText
                android:id="@+id/searchText"
                android:background="@drawable/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/cancel"
                android:layout_toLeftOf="@+id/searchBack"
                android:inputType="text"
                android:hint="Search"
                android:singleLine="true" />

            <ImageButton
                android:id="@+id/searchBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/searchForward"
                android:contentDescription="@string/search_backwards"
                android:background="@drawable/button"
                android:src="@drawable/ic_arrow_left" />

            <ImageButton
                android:id="@+id/searchForward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/search_forwards"
                android:background="@drawable/button"
                android:src="@drawable/ic_arrow_right" />

        </RelativeLayout>

    </ViewSwitcher>

    <RelativeLayout
        android:id="@+id/lowerButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" >

        <SeekBar
            android:id="@+id/pageSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="0dp"
            android:thumb="@drawable/seek_thumb"
            android:progressDrawable="@drawable/seek_progress"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="12dp"
            android:paddingBottom="8dp"
            android:background="@color/toolbar"
            />

        <TextView
            android:id="@+id/pageNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/pageSlider"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:background="@drawable/page_num"
            android:textColor="#FFFFFF"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>

</RelativeLayout>
